fixed gap between navbar and header

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,6 +6,11 @@
     position: relative; 
     padding: 100px 0;   
     margin-top:0px;
+    background-repeat: no-repeat;
+}
+
+.navbar{
+	margin-bottom:0px;
 }
 
 .jumbotron {
